<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#191919"
    android:alpha="1"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/cityText"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/condDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="7dp"
        android:layout_below="@id/cityText"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/temp"
        style="@style/tempStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_alignBaseline="@id/condDescr"
        android:layout_toRightOf="@id/condDescr"
        android:layout_marginTop="7dp" />

    <TextView
        android:id="@+id/pressLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/condDescr"
        android:text="@string/text_pressure"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pressLab"
        android:layout_toRightOf="@id/pressLab"
        style="@style/valData"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/humLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pressLab"
        android:text="@string/text_humidity"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/humLab"
        android:layout_toRightOf="@id/humLab"
        android:layout_marginLeft="10dp"
        style="@style/valData"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/windLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/humLab"
        android:text="@string/text_wind"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_toRightOf="@id/windLab"
        android:layout_marginLeft="10dp"
        style="@style/valData"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/windDeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_toRightOf="@id/windSpeed"
        android:layout_marginLeft="4dp"
        style="@style/valData"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/button"
        android:text="@string/text_button_start"
        android:onClick="onClickStart"
        android:textColor="#558b2f"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/button2"
        android:text="@string/text_button_stop"
        android:onClick="onClickStop"
        android:textColor="#ff1201"
        android:textSize="22sp"
        android:clickable="true"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LatLon"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_service"
        android:id="@+id/textService"
        android:layout_below="@+id/windLab"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:textColor="#ffffff"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textServiceStatus"
        android:layout_alignBottom="@+id/textService"
        android:layout_toRightOf="@+id/textService"
        android:layout_toEndOf="@+id/textService"
        android:layout_marginLeft="5dp"
        android:textColor="#64dd17"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textVersin"
        android:layout_above="@+id/LatLon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#6977fd"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/cityText"
        android:layout_toRightOf="@+id/temp"
        android:layout_toEndOf="@+id/temp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@null"
        android:layout_marginTop="17dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@null" />

</RelativeLayout>